--- a/project/apps/shop/src/app/components/navbar/navbar.component.html
+++ b/project/apps/shop/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,10 @@
-<p>navbar works!</p>
+<div>
+    <button nz-button nzType="default" routerLink="/product">
+        <i nz-icon nzType="appstore" nzTheme="fill"></i>
+        Products
+    </button>
+    <button nz-button nzType="default" routerLink="/cart">
+        <i nz-icon nzType="shopping-cart" nzTheme="outline"></i>
+        Basket
+    </button>
+</div>
