--- a/project/apps/shop/src/app/components/product-add/product-add.component.html
+++ b/project/apps/shop/src/app/components/product-add/product-add.component.html
@@ -1,1 +1,27 @@
-<p>product-add works!</p>
+<button nz-button [nzType]="'primary'" (click)="showModal()"><span>Add Product</span></button>
+<nz-modal [(nzVisible)]="isVisible" footer={null} nzFooter=" " nzTitle="Add new product" (nzOnCancel)="handleCancel()">
+    <ng-container *nzModalContent>
+        <form nz-form [formGroup]="validateForm" (ngSubmit)="submitForm()">
+            <nz-form-item>
+                <nz-form-control nzErrorTip="Please input product name!">
+                    <input formControlName="name" nz-input placeholder="Product name" />
+                </nz-form-control>
+            </nz-form-item>
+            <nz-form-item>
+                <nz-form-control nzErrorTip="Please input product description!">
+                    <input formControlName="description" nz-input placeholder="Product description" />
+                </nz-form-control>
+            </nz-form-item>
+            <nz-form-item>
+                <nz-form-control nzErrorTip="Please input product price!">
+                    <input formControlName="price" nz-input placeholder="Product price" />
+                </nz-form-control>
+            </nz-form-item>
+            <nz-form-item>
+                <nz-form-control>
+                    <button nz-button nzType="primary" [disabled]="!validateForm.valid">Add</button>
+                </nz-form-control>
+            </nz-form-item>
+        </form>
+    </ng-container>
+</nz-modal>
