--- a/project/apps/shop/src/app/components/product-list/product-list.component.html
+++ b/project/apps/shop/src/app/components/product-list/product-list.component.html
@@ -1,22 +1,24 @@
-<nz-table #basicTable [nzData]="listOfData">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Age</th>
-        <th>Address</th>
-        <th>Action</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let data of basicTable.data">
-        <td>{{ data.name }}</td>
-        <td>{{ data.age }}</td>
-        <td>{{ data.address }}</td>
-        <td>
-          <a>Action 一 {{ data.name }}</a>
-          <nz-divider nzType="vertical"></nz-divider>
-          <a>Delete</a>
-        </td>
-      </tr>
-    </tbody>
-  </nz-table>
+<nz-table #basicTable [nzData]="products">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>price</th>
+      <th>Action</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let data of basicTable.data">
+      <td>
+        {{ data.name }} 
+        <br>
+        {{ data.description }}
+      </td>
+      <td>
+        {{ data.price }}
+      </td>
+      <td>
+        <button nz-button nzType="primary" (click)="addToCart(data.id)">Add</button>
+      </td>
+    </tr>
+  </tbody>
+</nz-table>
