--- a/project/apps/shop/src/app/pages/cart/cart.component.html
+++ b/project/apps/shop/src/app/pages/cart/cart.component.html
@@ -1,2 +1,2 @@
-<project-cart-list></project-cart-list>
+<project-cart-list [cart]="cart" (newCart)="addNewCart($event)" (removedItem)="removeFromCart($event)"></project-cart-list>
 
