--- a/project/apps/shop/src/app/components/navbar/navbar.component.html
+++ b/project/apps/shop/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div>
+<div id="navbar">
     <button nz-button nzType="default" routerLink="/product">
         <i nz-icon nzType="appstore" nzTheme="fill"></i>
         Products
