--- a/project/apps/shop/src/app/pages/cart/cart.component.html
+++ b/project/apps/shop/src/app/pages/cart/cart.component.html
@@ -1,2 +1,4 @@
+<h2 id="header">Basket</h2>
+<h3 id="subHeader"  class="secondaryColor">List of products in your basket</h3>
 <project-cart-list [cart]="cart" (newCart)="addNewCart($event)" (removedItem)="removeFromCart($event)"></project-cart-list>
 
